# marketlab-rs

./: .gitignore  Cargo.toml  DirectoryStructure.txt  README.md  build_root_gui.ps1  setup_workspace.ps1
.cargo/: config.toml
.cursor/rules/: Agent A UI.md  Agent A Upgrade Interactive Asset Configuration Row.md  Agent A VectorTA.md  Agent A data asset base.md  Agent B Graphics  and Math.md  Agent B Upgrade..md  Agent B panning and zooming.md  Agent C Upgrade Asynchronous CSV File Monitor.md  Agent C Upgrade Live Pipeline Ingestion.md  Agent C upgrade.md  Agent C.md  Blueprint Directive Implement Production Stage Bridge & OpenUSD.md  Build High-Density Stage Ledger Explorer Panel.md  Build Multi-Panel Node Canvas Frame.md  Build the USD Stage Graph Compilation Core.md  Dopesheet Viewport Clipping & USD Namespace Path Generation.md  Engineering Directive_FinanceDatabase.md  Engineering Directive_Implement Stage 2.md  Engineering Directive_Implement Stage 3.md  Engineering Directive_Universal_Topology_Dopesheet.md  Graphics Update charting engine.md  Implement Decentralized Workspace Context Handle.md  Implement GPUI-Native Workstation Workspace Layout.md  Integrate Graph Engine Invalidation with Workspace Context.md  Legacy Playhead Replay Deprecation & Core Code Removal.md  Live GraphEngine UI Metrics Synchronization.md  MarketLab Agent Technical Brief.md  MarketLab Long-Term Architectural Strategy.md  MarketLab Project Status.md  MarketLab UI refactor.md  MarketLab Workstation Specification.md  OTL Compiled Object Binary Specification & Compatibility Layout.md  OTL Grammar Expansion & Three-Tier Object Refactor.md  OTL Parallel Execution Level Contract.md  (+37 more)
crates/marketlab_blueprint_adapter/: Cargo.toml
crates/marketlab_blueprint_adapter/src/: asset_data.rs  blueprint.rs  bulk_assets.rs  chart_model.rs  chart_raster.rs  cold_path_write.rs  compile.rs  compile_profile.rs  layer_resolution.rs  lib.rs  metadata.rs  node_series_cache.rs  performance_analytics.rs  performance_export.rs  performance_report.rs  portfolio_pins.rs  provider.rs  series_pins.rs  snapshot.rs  sparkline_bitmap.rs  stage_tree.rs  stage_variants.rs  sweep.rs  taxonomy_index.rs  telemetry.rs  types.rs  usd_persistence.rs  viewport_timeline.rs
crates/marketlab_finance_editor/: Cargo.toml  build.rs
crates/marketlab_finance_editor/.cargo/: config.toml
crates/marketlab_finance_editor/src/: main.rs
crates/pulsar_marketlab/: Cargo.toml
crates/pulsar_marketlab/data/: GLD.csv  IWM.csv  QQQ.csv  SPY.csv
crates/pulsar_marketlab/resources/usd/: schema.usda
crates/pulsar_marketlab/src/: asset_chart_bitmap.rs  asset_path_input.rs  canvas_compose.rs  canvas_graph_snapshot.rs  canvas_hydrate.rs  canvas_stage_sync.rs  geometric_analysis.rs  graph_compiler.rs  graph_ui_snapshot.rs  lib.rs  main.rs  ohlc_chart_pane.rs  portfolio_analytics.rs  portfolio_integrator_ledger.rs  portfolio_wealth_chart.rs  session_autosave.rs  technical_analysis.rs  workspace_state.rs
crates/pulsar_marketlab/src/execution_engine/: mod.rs  stage_ledger.rs
crates/pulsar_marketlab/src/fix_engine/: mod.rs
crates/pulsar_marketlab/src/graph_compiler/: mod.rs  otl_registry.rs  otl_stdlib_catalog.rs  registry.rs  tests.rs
crates/pulsar_marketlab/src/signal_dsl/: ast.rs  financial.rs  interpreter.rs  mock_provider.rs  mod.rs  parser.rs  services.rs  vector.rs
crates/pulsar_marketlab/src/signal_kernel/: mod.rs
crates/pulsar_marketlab/src/stage_bridge/: mod.rs  production_provider.rs  usd_spike.rs
crates/pulsar_marketlab/src/trading_stage/: market_stage.rs  mod.rs  scene.rs
crates/pulsar_marketlab/src/ui/: menu_bar.rs  mod.rs  node_canvas.rs  otl_editor.rs  otl_node_params.rs  param_inspector.rs  render_viewport.rs  sidebar_inspector.rs  split_layout.rs  stage_composer.rs  ta_uber_inspector.rs  telemetry_bridge.rs  timeline_controls.rs  topology_dopesheet.rs  workstation_host.rs
crates/pulsar_marketlab/tests/: end_to_end_core_spec.rs  perf_test.rs
crates/pulsar_marketlab/tests/fixtures/: schema.usda  spy_assets.usda  spy_assets_inactive_overlay.usda
crates/pulsar_marketlab_core/: Cargo.toml
crates/pulsar_marketlab_core/benches/: tier_sweep.rs
crates/pulsar_marketlab_core/resources/usd/: finance_database_equities.usda  metadata_library.usda  schema.usda
crates/pulsar_marketlab_core/src/: execution_matrix.rs  finance_database_ingest.rs  layer_stack.rs  lib.rs  schema_defaults.rs  schema_sidecar.rs  snapshot_serialization.rs  sublayer_stack.rs  ta_uber_signal.rs  taxonomy.rs
crates/pulsar_marketlab_core/src/compiler/: codegen.rs  mod.rs
crates/pulsar_marketlab_core/src/engine/: market_timeline_window.rs  matrix_provider.rs  mod.rs  parallel_sweep.rs  snapshot.rs  vector_sweep.rs
crates/pulsar_marketlab_core/src/frontend/: ast.rs  canonical.rs  codegen.rs  format.rs  lexer.rs  mod.rs  parser.rs  validate.rs
crates/pulsar_marketlab_core/src/orchestration/: compiler.rs  engine.rs  ga_bridge.rs  mod.rs  portfolio.rs  script_resolve.rs  series_eval.rs
crates/pulsar_marketlab_core/src/orchestration/binary/: mod.rs  verifier.rs
crates/pulsar_marketlab_core/src/orchestration/compiler/: tests.rs
crates/pulsar_marketlab_core/tests/: codegen_spec.rs  geometric_fortress_otl_export_spec.rs  geometric_fortress_spec.rs  otl_smoke_spec.rs
crates/vector_ga/: Cargo.toml
crates/vector_ga/src/: dispatch.rs  lib.rs  operators.rs  registry.rs  types.rs
scripts/: apply_plugin_blueprints_patches.ps1  clean_build_artifacts.ps1  generate_bundled_sample_csvs.py  run_finance_editor.ps1  setup_pulsar_external.ps1
(+50 files in other folders)
