[workspace]
resolver = "2"
members = [
    "crates\\pulsar_marketlab",
    "crates\\pulsar_marketlab_core",
    "crates\\pulsar_marketlab_ui",
    "crates\\marketlab_blueprint_adapter",
    "crates\\vector_ga",
]
exclude = [
    "external\\Plugin_Blueprints",
    "external\\Graphy",
    "crates\\marketlab_finance_editor",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
nalgebra = "0.32"
rayon = "1.8"
arrow-array = { version = "54", default-features = false }
arrow-buffer = { version = "54", default-features = false }
vector-ta = "0.2.7"
vector-ga = { path = "crates/vector_ga" }
clifford = { version = "0.3", default-features = false, features = ["nalgebra-0_32"] }
thiserror = "1.0"
csv = "1.3"
