[package]
name = "pulsar_marketlab"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ndarray = { workspace = true }
nalgebra = { workspace = true }
rayon = { workspace = true }
vector-ta = { workspace = true }
vector-ga = { workspace = true }
thiserror = { workspace = true }
csv = { workspace = true }
unicode-segmentation = "1.12"
gpui = "0.2.2"
image = { version = "0.25", default-features = false }
gpui-component = { version = "0.5.1", features = ["tree-sitter-languages"] }
num-traits = "0.2"
ordered-float = "4.2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
openusd = "0.3.0"
pulsar_marketlab_core = { path = "../pulsar_marketlab_core" }
pulsar_marketlab_ui = { path = "../pulsar_marketlab_ui" }
rfd = "0.15"

[dev-dependencies]
pulsar_marketlab_core = { path = "../pulsar_marketlab_core" }
pulsar_marketlab_ui = { path = "../pulsar_marketlab_ui" }
tempfile = "3"
# without triggering a nested workspace collision:
# pulsar-ui = { path = "../../external/Pulsar-Native/crates/pulsar-ui" }
